[[bin]]
name = "polkadot"
path = "src/main.rs"

[package]
name = "polkadot"
version = "0.8.11"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
cli = { package = "polkadot-cli", path = "cli" }
# It looks like this is the only way to pass features to it
collator = { package = "polkadot-collator", path = "collator" }
futures = "0.3.4"
service = { package = "polkadot-service", path = "service" }
parity-util-mem = { version = "*", default-features = false, features = ["jemalloc-global"] }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
tempfile = "3.1.0"

[workspace]
members = [
	"availability-store",
	"cli",
	"collator",
	"erasure-coding",
	"network",
	"network/test",
	"primitives",
	"runtime/common",
	"runtime/parachains",
	"runtime/polkadot",
	"runtime/kusama",
	"runtime/westend",
	"runtime/test-runtime",
	"runtime/test-runtime/client",
	"service",
	"statement-table",
	"service",
	"validation",

	"node/messages",
	"node/overseer",
	"node/primitives",
	"node/service",

	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
	"parachain/test-parachains/code-upgrader",
]
exclude = [
	"runtime/polkadot/wasm",
	"runtime/kusama/wasm",
	"runtime/westend/wasm",
	"parachain/test-parachains/adder/wasm",
]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"

[features]
runtime-benchmarks=["cli/runtime-benchmarks"]
service-rewr= [
	"cli/service-rewr",
	"collator/service-rewr",
]

[patch."https://github.com/paritytech/substrate"]
sc-authority-discovery = { path = "../substrate/client/authority-discovery" }
sc-basic-authorship = { path = "../substrate/client/basic-authorship" }
sc-block-builder = { path = "../substrate/client/block-builder" }
sc-chain-spec = { path = "../substrate/client/chain-spec" }
sc-chain-spec-derive = { path = "../substrate/client/chain-spec/derive" }
sc-cli = { path = "../substrate/client/cli" }
sc-client-api = { path = "../substrate/client/api" }
sc-client-db = { path = "../substrate/client/db" }
sc-consensus = { path = "../substrate/client/consensus/common" }
sc-consensus-babe = { path = "../substrate/client/consensus/babe" }
sc-consensus-babe-rpc = { path = "../substrate/client/consensus/babe/rpc" }
sc-consensus-epochs = { path = "../substrate/client/consensus/epochs" }
sc-consensus-slots = { path = "../substrate/client/consensus/slots" }
sc-consensus-uncles = { path = "../substrate/client/consensus/uncles" }
sc-executor = { path = "../substrate/client/executor" }
sc-executor-common = { path = "../substrate/client/executor/common" }
sc-executor-wasmi = { path = "../substrate/client/executor/wasmi" }
sc-executor-wasmtime = { path = "../substrate/client/executor/wasmtime" }
sc-finality-grandpa = { path = "../substrate/client/finality-grandpa" }
sc-finality-grandpa-rpc = { path = "../substrate/client/finality-grandpa/rpc" }
sc-informant = { path = "../substrate/client/informant" }
sc-keystore = { path = "../substrate/client/keystore" }
sc-light = { path = "../substrate/client/light" }
sc-network = { path = "../substrate/client/network" }
sc-network-gossip = { path = "../substrate/client/network-gossip" }
sc-network-test = { path = "../substrate/client/network/test" }
sc-offchain = { path = "../substrate/client/offchain" }
sc-peerset = { path = "../substrate/client/peerset" }
sc-proposer-metrics = { path = "../substrate/client/proposer-metrics" }
sc-rpc = { path = "../substrate/client/rpc" }
sc-rpc-api = { path = "../substrate/client/rpc-api" }
sc-rpc-server = { path = "../substrate/client/rpc-servers" }
sc-service = { path = "../substrate/client/service" }
sc-state-db = { path = "../substrate/client/state-db" }
sc-telemetry = { path = "../substrate/client/telemetry" }
sc-tracing = { path = "../substrate/client/tracing" }
sc-transaction-graph = { path = "../substrate/client/transaction-pool/graph" }
sc-transaction-pool = { path = "../substrate/client/transaction-pool" }
sp-allocator = { path = "../substrate/primitives/allocator" }
sp-api = { path = "../substrate/primitives/api" }
sp-api-proc-macro = { path = "../substrate/primitives/api/proc-macro" }
sp-application-crypto = { path = "../substrate/primitives/application-crypto" }
sp-arithmetic = { path = "../substrate/primitives/arithmetic" }
sp-authority-discovery = { path = "../substrate/primitives/authority-discovery" }
sp-authorship = { path = "../substrate/primitives/authorship" }
sp-block-builder = { path = "../substrate/primitives/block-builder" }
sp-blockchain = { path = "../substrate/primitives/blockchain" }
sp-chain-spec = { path = "../substrate/primitives/chain-spec" }
sp-consensus = { path = "../substrate/primitives/consensus/common" }
sp-consensus-aura = { path = "../substrate/primitives/consensus/aura" }
sp-consensus-babe = { path = "../substrate/primitives/consensus/babe" }
sp-consensus-vrf = { path = "../substrate/primitives/consensus/vrf" }
sp-core = { path = "../substrate/primitives/core" }
sp-database = { path = "../substrate/primitives/database" }
sp-debug-derive = { path = "../substrate/primitives/debug-derive" }
sp-externalities = { path = "../substrate/primitives/externalities" }
sp-finality-grandpa = { path = "../substrate/primitives/finality-grandpa" }
sp-finality-tracker = { path = "../substrate/primitives/finality-tracker" }
sp-inherents = { path = "../substrate/primitives/inherents" }
sp-io = { path = "../substrate/primitives/io" }
sp-keyring = { path = "../substrate/primitives/keyring" }
sp-npos-elections = { path = "../substrate/primitives/npos-elections" }
sp-npos-elections-compact = { path = "../substrate/primitives/npos-elections/compact" }
sp-offchain = { path = "../substrate/primitives/offchain" }
sp-panic-handler = { path = "../substrate/primitives/panic-handler" }
sp-rpc = { path = "../substrate/primitives/rpc" }
sp-runtime = { path = "../substrate/primitives/runtime" }
sp-runtime-interface = { path = "../substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro = { path = "../substrate/primitives/runtime-interface/proc-macro" }
sp-serializer = { path = "../substrate/primitives/serializer" }
sp-session = { path = "../substrate/primitives/session" }
sp-staking = { path = "../substrate/primitives/staking" }
sp-state-machine = { path = "../substrate/primitives/state-machine" }
sp-std = { path = "../substrate/primitives/std" }
sp-storage = { path = "../substrate/primitives/storage" }
sp-timestamp = { path = "../substrate/primitives/timestamp" }
sp-tracing = { path = "../substrate/primitives/tracing" }
sp-transaction-pool = { path = "../substrate/primitives/transaction-pool" }
sp-trie = { path = "../substrate/primitives/trie" }
sp-utils = { path = "../substrate/primitives/utils" }
sp-version = { path = "../substrate/primitives/version" }
sp-wasm-interface = { path = "../substrate/primitives/wasm-interface" }

