[[bin]]
name = "polkadot"
path = "src/main.rs"

[package]
name = "polkadot"
version = "0.8.11"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
cli = { package = "polkadot-cli", path = "cli" }
# It looks like this is the only way to pass features to it
collator = { package = "polkadot-collator", path = "collator" }
futures = "0.3.4"
service = { package = "polkadot-service", path = "service" }
parity-util-mem = { version = "*", default-features = false, features = ["jemalloc-global"] }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
tempfile = "3.1.0"

[workspace]
members = [
	"availability-store",
	"cli",
	"collator",
	"erasure-coding",
	"network",
	"network/test",
	"primitives",
	"runtime/common",
	"runtime/parachains",
	"runtime/polkadot",
	"runtime/kusama",
	"runtime/westend",
	"runtime/test-runtime",
	"runtime/test-runtime/client",
	"service",
	"statement-table",
	"service",
	"validation",

	"node/messages",
	"node/overseer",
	"node/primitives",
	"node/service",

	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
	"parachain/test-parachains/code-upgrader",
]
exclude = [
	"runtime/polkadot/wasm",
	"runtime/kusama/wasm",
	"runtime/westend/wasm",
	"parachain/test-parachains/adder/wasm",
]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"

[features]
runtime-benchmarks=["cli/runtime-benchmarks"]
service-rewr= [
	"cli/service-rewr",
	"collator/service-rewr",
]

[patch."https://github.com/paritytech/substrate"]
sc-authority-discovery = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-basic-authorship = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-block-builder = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-chain-spec = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-chain-spec-derive = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-cli = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-client-api = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-client-db = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-consensus = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-consensus-babe = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-consensus-babe-rpc = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-consensus-epochs = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-consensus-slots = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-consensus-uncles = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-executor = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-executor-common = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-executor-wasmi = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-executor-wasmtime = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-finality-grandpa = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-finality-grandpa-rpc = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-informant = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-keystore = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-light = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-network = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-network-gossip = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-network-test = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-offchain = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-peerset = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-proposer-metrics = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-rpc = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-rpc-api = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-rpc-server = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-service = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-state-db = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-telemetry = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-tracing = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-transaction-graph = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sc-transaction-pool = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-allocator = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-api = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-api-proc-macro = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-application-crypto = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-arithmetic = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-authority-discovery = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-authorship = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-block-builder = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-blockchain = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-chain-spec = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-consensus = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-consensus-aura = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-consensus-babe = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-consensus-vrf = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-core = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-database = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-debug-derive = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-externalities = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-finality-grandpa = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-finality-tracker = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-inherents = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-io = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-keyring = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-npos-elections = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-npos-elections-compact = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-offchain = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-panic-handler = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-rpc = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-runtime = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-runtime-interface = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-runtime-interface-proc-macro = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-serializer = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-session = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-staking = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-state-machine = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-std = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-storage = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-timestamp = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-tracing = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-transaction-pool = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-trie = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-utils = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-version = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }
sp-wasm-interface = { git = "https://github.com/twittner/substrate.git", branch = "libp2p-0.20.0" }

