[package]
name = "polkadot-statement-table"
version = "0.8.11"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
primitives = { package = "polkadot-primitives", path = "../primitives" }
