[package]
name = "polkadot-network-test"
version = "0.8.11"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
parking_lot = "0.10.0"
futures = "0.3.1"
rand = "0.7.2"
sc-consensus = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sc-network = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sc-service = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0", features = ["test-helpers"] }
sc-network-test = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sp-consensus = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sc-client-api = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sp-blockchain = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sp-runtime = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sp-core = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sc-block-builder = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
polkadot-test-runtime-client = { path = "../../runtime/test-runtime/client" }
