[package]
name = "polkadot-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
sc-block-builder = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sc-consensus = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sc-light = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sc-service = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0", features = ["test-helpers"],  default-features = false }
substrate-test-client = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sp-core = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
polkadot-test-runtime = { path = ".." }
polkadot-runtime-common = { path = "../../common" }
polkadot-primitives = { path = "../../../primitives" }
sp-runtime = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sp-api = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
sp-blockchain = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
sc-client-api = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
pallet-timestamp = { git = "https://github.com/twittner/substrate", branch = "libp2p-0.20.0" }
futures = "0.3.1"
